<resources>
    <string name="app_name">TheCatApi</string>
    <string name="animated_cat">Animated cat</string>
    <string name="title_all_cats">All cats</string>
    <string name="title_favorite_cats">Favorite cats</string>
    <string name="database_name">favorites</string>
    <string name="cat_image">Image of the cat</string>
    <string name="delete_favorite">Delete favorite</string>
    <string name="download_picture">Download the picture</string>
    <string name="no_items">No items</string>
    <string name="downloading_description">Downloading selected picture…</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="cancel">Cancel</string>
</resources>